--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     </head>
     <body>
         <h1>Titre de ma page  </h1>
-        <p>Paragraph1</p>
-        <p>Paragraph2</p>
-        <p>Paragraph3</p>
+        <div>Article 1</div>
+        <div>Article 2</div>
     </body>
 </html>
